# BesselsTrick

./: .gitignore  CMakeLists.txt  README.md  build.sh
.github/workflows/: build.yaml
cmake/: TorchUtils.cmake
resources/: magic.xml  magic2.xml  magic_bake.xml  render_algorithms.py  v4.xml
resources/img/: render_algorithms.py
resources/pretrained/: BASS    1.ts  BASS    2.ts  BASS-ROAD.ts  BRASS   1.ts  BRASS   2.ts  BRASS   3.ts  CALIOPE  .ts  CLAV    1.ts  E.ORGAN 1.ts  E.PIANO 1.ts  FLUTE   1.ts  GUITAR  1.ts  GUITAR  2.ts  HARP    2.ts  HARPSICH .ts  KOTO     .ts  LayerMelo.ts  Lunar.Bel.ts  MARIMBA  .ts  OB8 BRASS.ts  ORCH-CHIM.ts  ORCHESTRA.ts  OSCAR BAS.ts  PIANO   1.ts  PIANO   2.ts  PIANO   3.ts  PIPES   1.ts  Pan Pipe .ts  REFS WHIS.ts  SHIMMER  .ts  SITAR    .ts  STEEL DRU.ts  STRINGS 1.ts  STRINGS 2.ts  STRINGS 3.ts  SYN CLAVC.ts  SYN-LEAD .ts  Smoothout.ts  TBTAN BEL.ts  TIMPANI  .ts  (+6 more)
src/: DDSPModels.cpp  DDSPModels.hpp  DrawableLabel.cpp  DrawableLabel.hpp  DynamicModels.cpp  EnvModels.cpp  EnvModels.hpp  FMSynth.cpp  FMSynth.hpp  FeatureRegister.hpp  GuiItems.cpp  GuiItems.hpp  ParameterIDs.hpp  PitchTrackManager.hpp  PluginConfig.hpp  PluginProcessor.cpp  PluginProcessor.h  PluginProcessor.hpp  PluginProcessorGUI.cpp  PluginProcessorModelRoutines.cpp  RMSProcessor.cpp  RMSProcessor.hpp  TorchInference.cpp  TorchInference.hpp  Yin.cpp  Yin.hpp  algorithms.hpp
src/FMSynth/: FMSynth.cpp  FMSynth.hpp  algorithms.hpp
src/FeatureProcessing/: FeatureRegister.hpp  RMSProcessor.cpp  RMSProcessor.hpp  Yin.cpp
src/GuiItems/: DrawableLabel.cpp  GuiItems.hpp  ModelComboBox.cpp  RatiosBar.cpp  StatusBar.cpp
src/Inference/: TorchInference.hpp
